# matrix-historian

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  MIGRATION.md  MYPY_FIX_README.md  MYPY_SKIP_README.md  README.md  README_zh.md  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  fix_imports.py  pyproject.toml  test_workflow.py
.github/workflows/: cd.yml  ci.yml  database-migrations.yml  deploy.yml
deploy/: deploy.sh
docs/: README.md  contributing.md  deployment.md  development.md  frontend-migration-plan.md  frontend-migration-qa.md  frontend-migration-summary.md  get-started.md  media-storage.md  overview.md
docs/reference/: api-reference.md
flake8_venv/: pyvenv.cfg
scripts/: add_avatar_columns.sql  add_fulltext_search.sql  add_indexes.sql  backfill_avatars.py  migrate_timestamps_to_utc.py
services/api/: Dockerfile  Dockerfile.optimized  requirements.txt
services/api/app/: __init__.py  cache.py  main.py
services/api/app/ai/: analyzer.py
services/api/app/api/: analytics.py  media.py  routes.py
services/bot/: Dockerfile  Dockerfile.optimized  requirements.txt
services/bot/app/: __init__.py  bot.py  main.py
services/web/: Dockerfile  package-lock.json  package.json
services/web/src/: app.css  app.html
services/web/src/lib/: AnimatedCount.svelte  Chart.svelte  InfiniteScroll.svelte  LocalePicker.svelte  SearchableDropdown.svelte  Skeleton.svelte  Time.svelte  api.js  i18n.js  theme.js  timezone.js
services/web/src/lib/locales/: en.json  zh-CN.json
services/web/src/routes/: +layout.svelte  +page.server.js  +page.svelte
services/web/src/routes/analytics/: +page.server.js  +page.svelte
services/web/src/routes/api/[...path]/: +server.js
services/web/src/routes/media/: +page.server.js  +page.svelte
services/web/src/routes/messages/: +page.server.js  +page.svelte
services/web/src/routes/rooms/: +page.server.js  +page.svelte
services/web/src/routes/rooms/[id]/: +page.server.js  +page.svelte
services/web/src/routes/users/: +page.server.js  +page.svelte
services/web/src/routes/users/[id]/: +page.server.js  +page.svelte
shared/: Dockerfile  README.md  alembic.ini  requirements.txt  setup.py
shared/alembic/: env.py
shared/app/: __init__.py
shared/app/crud/: media.py  message.py
shared/app/db/: __init__.py  database.py
shared/app/models/: message.py
shared/app/schemas/: analytics.py  media.py  message.py
shared/app/storage/: __init__.py  minio_client.py
shared/app/utils/: logging_config.py
shared/base_app/crud/: media.py  message.py
shared/base_app/db/: __init__.py  database.py
shared/base_app/models/: message.py
shared/base_app/schemas/: analytics.py  media.py  message.py
shared/base_app/storage/: __init__.py  minio_client.py
shared/base_app/utils/: logging_config.py
src/: .env.example  Dockerfile  Dockerfile.webui  bot_session.txt  docker-compose.yml  requirements.txt
src/app/: main.py
src/app/ai/: analyzer.py
src/app/api/: analytics.py  routes.py
src/app/bot/: client.py  handler.py
src/app/crud/: message.py
src/app/db/: database.py
src/app/schemas/: analytics.py  message.py
src/app/utils/: logging_config.py
src/app/webui/: Dockerfile  __init__.py  main.py
src/app/webui/tools/: analysis.py
tests/: conftest.py  test_api.py  test_database.py  test_shared_models.py
