[project]
name = "matrix-historian"
version = "0.1.0"
description = "A Matrix message archival and analysis tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Matrix Bot
    "matrix-nio==0.24.0",
    "simplematrixbotlib==2.12.3",
    "h11==0.14.0",
    "httpcore==0.17.3",
    # FastAPI
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "sqlalchemy==2.0.40",
    "python-multipart==0.0.20",
    "pydantic==2.11.4",
    "email-validator==2.2.0",
    # Web UI
    "pandas==2.2.3",
    # Development tools
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    # Retry mechanism
    "backoff==2.2.1",
    # Data analysis and visualization
    "plotly==5.20.0",
    
    "jieba==0.42.1",
    "networkx==3.2.1",
    
    # AI
    "groq",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.5",
]
